Added secured integ tests
Signed-off-by: owaiskazi19 <owaiskazi19@gmail.com>